--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -5,8 +5,9 @@ $this->headTitle('Zend Framework Tutorial');
 echo $this->doctype(); ?>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"> 
 <head>
-    <?php echo $this->headMeta(); ?> 
-<?php echo $this->headTitle(); ?> 
+  <?php echo $this->headMeta(); ?> 
+	<?php echo $this->headTitle(); ?>
+	<?php echo $this->headLink()->prependStylesheet($this->baseUrl().'css/site.css') ?>
 </head>
 <body>
 <div id="content">
