--- a/application/views/scripts/index/add.phtml
+++ b/application/views/scripts/index/add.phtml
@@ -1,1 +1,6 @@
-<br /><br /><center>View script for controller <b>Index</b> and script/action name <b>add</b></center>
+<?php
+$this->title = "Add new album";
+$this->headTitle($this->title);
+
+echo $this->form;
+?>
